# datagov-databases

./: .env.sample  .gitignore  .pre-commit-config.yml  Makefile  README.md  copier.yml  docker-compose.yml  pyproject.toml
.github/workflows/: commit.yml
datagov_data_access/db/: configs.py  decorators.py  interface.py  models.py
datagov_data_access/db/interfaces/: catalog.py  harvest.py
datagov_data_access/search/: client.py  config.py  documents.py  mappings.py  reader.py  spatial.py  writer.py
datagov_data_access/search/queries/: __init__.py  criteria.py  registry.py
datagov_data_access/search/queries/filters/: __init__.py  base.py  (+7 more)
datagov_data_access/shared/: constants.py
template/: .gitignore
template/apps/{% if template == 'astro-plain' %}{{application_name}}{% endif %}/: package.json.jinja
template/apps/{% if template == 'astro-uswds' %}{{application_name}}{% endif %}/: README.md  astro.config.mjs  gulpfile.cjs  package.json.jinja  tsconfig.json
tests/: catalog_fixtures.py  conftest.py  harvester_fixtures.py
tests/data/: americorps_datasets.csv
tests/integration/db/: test_catalog.py  test_catalog_search.py  test_dataset.py  test_dataset_slug.py  test_harvest_job.py  test_harvest_record.py  test_harvest_record_error.py  test_harvest_source.py  test_location.py  test_organization.py  test_queries.py
tests/integration/search/: test_client.py  test_documents.py  test_reader.py  test_spatial.py  test_transforms.py  test_writer.py
tests/unit/db/: test_db_query.py
tests/unit/search/: test_search_filter_registry.py  test_search_query.py
(+18 files in other folders)
