[project]
name = "datagov-data-access"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4,>=3.10"
dependencies = [
    "botocore (>=1.43.40,<2.0.0)",
    "opensearch-py (>=3.2.0,<4.0.0)",
    "haversine (>=2.9.0,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "geoalchemy2 (>=0.20.0,<0.21.0)",
    "psycopg (>=3.3.4,<4.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "freezegun (>=1.5.5,<2.0.0)",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"